// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DbStore Show Test: after create 1`] = `
<div
  class="show"
>
  {
  "collection": "simpleTestCol",
  "id": 0,
  "loading": false
}
</div>
`;

exports[`DbStore Show Test: after fetch 1`] = `
<div
  class="show"
>
  {
  "collection": "simpleTestCol",
  "id": 0,
  "item": {
    "myString": "myText",
    "myNum": 420,
    "id": 0
  },
  "loading": false
}
</div>
`;

exports[`DbStore Show Test: before anything 1`] = `
<div
  class="show"
>
  {
  "collection": "simpleTestCol",
  "loading": false
}
</div>
`;

exports[`DbStore Show Test: skip refetch if present 1`] = `
Object {
  "result": Object {
    "id": 0,
    "myNum": 420,
    "myString": "myText",
  },
}
`;
